--- a/wallet-core/Dockerfile
+++ b/wallet-core/Dockerfile
@@ -7,6 +7,6 @@ RUN go mod download
 
 COPY . .
 
-RUN go build -o app ./cmd/main.go
+# RUN go build -o app ./cmd/main.go
 
-CMD ["./app"]
+CMD ["go", "run", "./cmd/main.go"]
