--- a/wallet-core/Dockerfile
+++ b/wallet-core/Dockerfile
@@ -2,6 +2,8 @@ FROM golang:1.23 AS build-stage
 
 WORKDIR /go/src/app
 
+RUN apt-get update && apt-get install -y librdkafka-dev
+
 COPY go.mod go.sum ./
 RUN go mod download
 
