--- a/balance-consumer/package.json
+++ b/balance-consumer/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "kafka-node": "^5.0.0",
     "mysql2": "^3.11.0"
   },
   "devDependencies": {
